--- a/setup/nginx.custom.conf
+++ b/setup/nginx.custom.conf
@@ -1,6 +1,7 @@
 user http;
 worker_processes 1;
 daemon off;
+error_log /var/log/nginx/error.log;
 
 events {
     worker_connections 1024;
@@ -11,6 +12,11 @@ http {
     default_type application/octet-stream;
     sendfile on;
     keepalive_timeout 30;
+
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log /var/log/nginx/access.log main;
 
     include /etc/nginx/sites-enabled/*;
 }
